pkl-core/src/test/files/LanguageSnippetTests/input/errors/letExpressionError3.pkl
foo {
  bar = let (qux = 1)
}
